--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Movies App</string>
+    <string name="search">search</string>
+    <string name="clear_transition">clear_transition</string>
+    <string name="search_transition">searchTransition</string>
+    <string name="line_transition">line_transition</string>
 </resources>
