--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="clear_transition">clear_transition</string>
     <string name="search_transition">searchTransition</string>
     <string name="line_transition">line_transition</string>
+    <string name="play">play</string>
 </resources>
