--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="search_transition">searchTransition</string>
     <string name="line_transition">line_transition</string>
     <string name="play">play</string>
+    <string name="director">Director:</string>
 </resources>
