--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="line_transition">line_transition</string>
     <string name="play">play</string>
     <string name="director">Director:</string>
+    <string name="the_cast">The Cast</string>
 </resources>
