--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="play">play</string>
     <string name="director">Director:</string>
     <string name="the_cast">The Cast</string>
+    <string name="home">Home</string>
+    <string name="tv">Tv</string>
+    <string name="main">main</string>
 </resources>
