--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="main">main</string>
     <string name="birthday">Birthday</string>
     <string name="popularity">Popularity :</string>
+    <string name="show_more">Show More</string>
+    <string name="person">Person</string>
+    <string name="movies">Movies</string>
+    <string name="tv_show">TV Show</string>
+    <string name="all">All</string>
 </resources>
