--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="movies">Movies</string>
     <string name="tv_show">TV Show</string>
     <string name="all">All</string>
+    <string name="writer">Writer:</string>
+    <string name="dash">-</string>
 </resources>
