fix: trending recycler items ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="all">All</string>
     <string name="writer">Writer:</string>
     <string name="dash">-</string>
+    <string name="trending">Trending</string>
 </resources>
