--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,10 @@
     <string name="writer">Writer:</string>
     <string name="dash">-</string>
     <string name="trending">Trending</string>
-    <string name="trending">Trending</string>
     <string name="popular">Popular</string>
     <string name="rated">Rated</string>
+    <string name="Categories">Categories</string>
+    <string name="action">Action</string>
+    <string name="comedy">Comedy</string>
+    <string name="drama">Drama</string>
 </resources>
