--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,10 +20,11 @@
     <string name="writer">Writer:</string>
     <string name="dash">-</string>
     <string name="trending">Trending</string>
-    <string name="trending">Trending</string>
     <string name="popular">Popular</string>
     <string name="rated">Rated</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="categories">Categories</string>
+    <string name="about">About</string>
+    <string name="tv_shows">Tv Shows</string>
 </resources>
