--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,9 +22,12 @@
     <string name="trending">Trending</string>
     <string name="popular">Popular</string>
     <string name="rated">Rated</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="categories">Categories</string>
     <string name="about">About</string>
     <string name="tv_shows">Tv Shows</string>
+    <string name="categories_list">categories list</string>
+    <string name="today">Today</string>
+    <string name="now">Now</string>
+    <string name="biography">Biography</string>
+    <string name="alive">Alive</string>
 </resources>
