--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="about">About</string>
     <string name="tv_shows">Tv Shows</string>
     <string name="categories_list">categories list</string>
+    <string name="popular_cast">POPULAR CAST</string>
 </resources>
