--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,7 @@
     <string name="biography">Biography</string>
     <string name="alive">Alive</string>
     <string name="popular_cast">POPULAR CAST</string>
+    <string name="overview">Overview</string>
+    <string name="similar_movie">Similar Movie</string>
+    <string name="cast">Cast</string>
 </resources>
