--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,6 @@
     <string name="writer">Writer:</string>
     <string name="dash">-</string>
     <string name="trending">Trending</string>
-    <string name="popular">Popular</string>
     <string name="rated">Rated</string>
     <string name="categories">Categories</string>
     <string name="about">About</string>
@@ -31,4 +30,7 @@
     <string name="biography">Biography</string>
     <string name="alive">Alive</string>
     <string name="popular_cast">POPULAR CAST</string>
+    <string name="popular">Popular</string>
+    <string name="movie_image">movie image</string>
+    <string name="Upcoming">Upcoming</string>
 </resources>
