--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="overview">Overview</string>
     <string name="cast">Cast</string>
     <string name="similar_movie">Similar Movie</string>
+    <string name="similar_tv_shows">Similar TV Shows</string>
 </resources>
