fix: edit colors and edit iss_title_background slider

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="popularity">Popularity :</string>
     <string name="show_more">Show More</string>
     <string name="person">Person</string>
-    <string name="movies">Movies</string>
+    <string name="movies">TMDB</string>
     <string name="tv_show">TV Show</string>
     <string name="all">All</string>
     <string name="writer">Writer:</string>
